# parodus2ccsp

./: .gitignore  .sonar-project.properties  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  NOTICE  README.md
.github/scripts/: rtrouted.sh
.github/workflows/: codeql-analysis.yml  push.yml
patches/: Web_config_XML.patch  ccsp.patch  dbus.patch
source/: CMakeLists.txt  Makefile.am  configure.ac
source/WebConfig/: cosa_apis_util.c  cosa_webconfig_apis.c  cosa_webconfig_apis.h  cosa_webconfig_dml.c  cosa_webconfig_dml.h  cosa_webconfig_internal.c  cosa_webconfig_internal.h  webcfg_internal.c  webconfig_internal.c  webconfig_internal.h  webconfig_log.c  webconfig_log.h  webconfig_rbus.c  webconfig_rbus.h
source/app/: CMakeLists.txt  Makefile.am  libpd.c  libpd.h  main.c  privilege.c
source/arch/intel_usg/boards/rdkb_atom/config/comcast/: WebpaAgent.xml
source/broadband/: CMakeLists.txt  Makefile.am  cosa_webpa_apis.c  cosa_webpa_dml.c  cosa_webpa_internal.c  plugin_main.c  plugin_main_apis.c  ssp_action.c  ssp_main.c  ssp_messagebus_interface.c  webpa_adapter.c  webpa_attribute.c  webpa_internal.c  webpa_log.c  webpa_notification.c  webpa_parameter.c  webpa_rbus.c  webpa_replace.c  webpa_table.c
source/broadband/arch/intel_usg/boards/rdkb_atom/config/comcast/: WebpaAgent.xml
source/broadband/include/: cosa_apis.h  cosa_webpa_apis.h  cosa_webpa_dml.h  cosa_webpa_internal.h  plugin_main.h  plugin_main_apis.h  ssp_global.h  ssp_internal.h  ssp_messagebus_interface.h  webpa_internal.h  webpa_notification.h  webpa_rbus.h  webpa_table.h
source/include/: webpa_adapter.h  webpa_adapter_emu.h  webpa_rbus.h
src/: CMakeLists.txt  adapter.c  adapter.h
tests/: CMakeLists.txt  mock_cache.c  mock_dbus.h  mock_stack.c  mock_stack.h  simple.c  test_libpd.c  test_ssp.c  test_webpa_adapter.c  test_webpa_add_row.c  test_webpa_delete.c  test_webpa_get.c  test_webpa_get_attr.c  test_webpa_internal.c  test_webpa_notification.c  test_webpa_notification_cunit.c  test_webpa_rbus.c  test_webpa_replace.c  test_webpa_set.c  test_webpa_set_attr.c  test_webpa_table.c  test_webpa_test_set.c
